--- a/package.html
+++ b/package.html
@@ -1,112 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Couples Resort - Winter Getaway</title>
-    <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-    <header>
-        <div class="logo">
-            <img src="/images/CR Logo.png" alt="Couples Resort Logo">
-            <span>Couples Resort</span>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <header class="grid-con" id="main-header">
+      <nav id="main-nav" class="col-span-full">
+        <h2 class="hidden">Menu</h2>
+        <input type="checkbox" id="hamburger" />
+        <label for="hamburger">
+          <img src="/images/burger.svg" alt="hamburger menu icon" />
+        </label>
+        <div id="burger-con">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Rooms</a></li>
+            <li><a href="#">Packages</a></li>
+            <li><a href="room.html">Dining</a></li>
+            <li><a href="spa.html">Spa Activites</a></li>
+            <li><a href="#">Reservations</a></li>
+          </ul>
         </div>
-        <div class="menu-icon">
-            <span>☰</span>
-        </div>
+      </nav>
+      <div id="logo" class="col-span-full">
+        <img src="/images/Group 48.png" alt="Couples Resort Logo" />
+      </div>
     </header>
 
     <main>
-        <!-- Hero Section -->
-        <section class="hero">
-            <h1>Ice Hiking Algonquin Park Romantic Winter Getaway</h1>
-            <img src="/images/part 5.jpg" alt="Winter Getaway">
-        </section>
+      <!-- Hero Section -->
+      <section class="hero">
+        <h1>Ice Hiking Algonquin Park Romantic Winter Getaway</h1>
+        <img src="/images/part 5.jpg" alt="Winter Getaway" />
+      </section>
 
-        <!-- Packages Section -->
-        <section class="packages">
-            <h2>ALL INCLUSIVE PACKAGES</h2>
-            <h3>Weekends, Midweek or Week Long Vacations!</h3>
-            <img src="/images/part 1.jpg" alt="Hot Tub Experience">
-            <p>
-                Winter is magical  romantic with a crackling wood fire, a glass of champagne and your own bubbling Whirlpool Bath Tub and private rejuvenating Hot Tub, in-room real crackling wood fireplace and with romantic 1st Class gourmet dining.  
-                Picture perfect with pure white snow covered trees and lakes sparkling like diamonds in the snow.
-            </p>
-            <p>Enjoy a surreal evening of walking under the most brilliant stars. For those who need a little help getting outdoors we even have all the outdoor clothing for you if you decide to participate.
-                Book Direct and Surprise your partner! Or, Perhaps buying a Gift Certificate, to show your love, as a Christmas Gift, or Valentines Gift, or Wedding Gift, or Birthday Gift.</p>
-        </section>
+      <!-- Packages Section -->
+      <section class="packages">
+        <h2>ALL INCLUSIVE PACKAGES</h2>
+        <h3>Weekends, Midweek or Week Long Vacations!</h3>
+        <img src="/images/part 1.jpg" alt="Hot Tub Experience" />
+        <p>
+          Winter is magical romantic with a crackling wood fire, a glass of
+          champagne and your own bubbling Whirlpool Bath Tub and private
+          rejuvenating Hot Tub, in-room real crackling wood fireplace and with
+          romantic 1st Class gourmet dining.   Picture perfect with pure white
+          snow covered trees and lakes sparkling like diamonds in the snow.
+        </p>
+        <p>
+          Enjoy a surreal evening of walking under the most brilliant stars. For
+          those who need a little help getting outdoors we even have all the
+          outdoor clothing for you if you decide to participate. Book Direct and
+          Surprise your partner! Or, Perhaps buying a Gift Certificate, to show
+          your love, as a Christmas Gift, or Valentines Gift, or Wedding Gift,
+          or Birthday Gift.
+        </p>
+      </section>
 
-        <!-- Wilderness Section -->
-        <section class="wilderness">
-            <h2>WILDERNESS NATURE: FEED THE CANADA JAY and CHICKADEE</h2>
-            <img src="/images/part 2.jpg" alt="Bird Feeding">
-            <p>
-                Canadas new official  Bird; the Canada Jay and of course the Chick-a-dee! Touching Wildlife.
-            </p>
-            <p>Famous birds that will eat seeds from your hand or your hat are the Canada Jay (aka the Gray Jay or the Whisky Jack) and Boreal Chickadee.For the Aficionado Birder check the latest winter birding report for what is being seen and where.
-                1) Algonquin Logging Museum Trail 2) Spruce Bog Boardwalk Trail3) Mew Lake Old Railway Trail
-                We Provide Free to Use for our guests:- Pro Ice Hiking Crampons and Walking Poles- Park Pass from our Office- Bird seeds- Please never scatter or leave seed behind on the trails</p>
-        </section>
+      <!-- Wilderness Section -->
+      <section class="wilderness">
+        <h2>WILDERNESS NATURE: FEED THE CANADA JAY and CHICKADEE</h2>
+        <img src="/images/part 2.jpg" alt="Bird Feeding" />
+        <p>
+          Canadas new official Bird; the Canada Jay and of course the
+          Chick-a-dee! Touching Wildlife.
+        </p>
+        <p>
+          Famous birds that will eat seeds from your hand or your hat are the
+          Canada Jay (aka the Gray Jay or the Whisky Jack) and Boreal
+          Chickadee.For the Aficionado Birder check the latest winter birding
+          report for what is being seen and where. 1) Algonquin Logging Museum
+          Trail 2) Spruce Bog Boardwalk Trail3) Mew Lake Old Railway Trail We
+          Provide Free to Use for our guests:- Pro Ice Hiking Crampons and
+          Walking Poles- Park Pass from our Office- Bird seeds- Please never
+          scatter or leave seed behind on the trails
+        </p>
+      </section>
 
-        <!-- Cross Country Skiing Section -->
-        <section class="skiing">
-            <h2>CROSS COUNTRY SKIING and SNOWSHOEING</h2>
-            <img src="/images/part 3.jpg" alt="Skiing Adventures">
-            <p>
-                Tranquil with peacefulness. Algonquin Park has International quality ski trails; track set and skating lane.
-                 48 kilometres of groomed and 23 kilometres of non-groomed cross-country ski trails available in three low-usage trail networks, typically December to early April. Check the latest ski trail conditionsIf you cannot go skiing you can always go IceHiking.
-            </p>
-            <p>Provided Free to use:- Wax-less cross-country skis, boots and poles.- Waxing station for those that enjoy waxing.- Park Pass from our Office- Pro snowshoes- Park Pass from our Office
-                Serene spots for Snowshoeing:1) Algonquin Outdoor Logging Trail2) Spruce Bog Boardwalk Trail3) Mew Lake Old Railway Trail Go to Mew Lake Campground for starting point.
-                Read Story By Snow Shoe Ma</p>
-        </section>
+      <!-- Cross Country Skiing Section -->
+      <section class="skiing">
+        <h2>CROSS COUNTRY SKIING and SNOWSHOEING</h2>
+        <img src="/images/part 3.jpg" alt="Skiing Adventures" />
+        <p>
+          Tranquil with peacefulness. Algonquin Park has International quality
+          ski trails; track set and skating lane. 48 kilometres of groomed and
+          23 kilometres of non-groomed cross-country ski trails available in
+          three low-usage trail networks, typically December to early April.
+          Check the latest ski trail conditionsIf you cannot go skiing you can
+          always go IceHiking.
+        </p>
+        <p>
+          Provided Free to use:- Wax-less cross-country skis, boots and poles.-
+          Waxing station for those that enjoy waxing.- Park Pass from our
+          Office- Pro snowshoes- Park Pass from our Office Serene spots for
+          Snowshoeing:1) Algonquin Outdoor Logging Trail2) Spruce Bog Boardwalk
+          Trail3) Mew Lake Old Railway Trail Go to Mew Lake Campground for
+          starting point. Read Story By Snow Shoe Ma
+        </p>
+      </section>
 
-        <!-- Ice Skating Section -->
-        <section class="skating">
-            <h2>Ice Skating</h2>
-            <img src="/images/part 6.jpg" alt="Ice Skating Experience">
-            <p>
-                Ice Skating
-Authentic Canadian Experience of Skating Outdoors:1) In Algonquin Park at Mew Lake Campground, rough surface like the "good ol days".2) At the Township Rink, a short 15 minute walk into the Village, general skating or skirmish hockey (all invited).
-Provided Free to Use:- Ice Skates up to size 14- Mew Lake Park Pass from our Office  
-            </p>
-        </section>
+      <!-- Ice Skating Section -->
+      <section class="skating">
+        <h2>Ice Skating</h2>
+        <img src="/images/part 6.jpg" alt="Ice Skating Experience" />
+        <p>
+          Ice Skating Authentic Canadian Experience of Skating Outdoors:1) In
+          Algonquin Park at Mew Lake Campground, rough surface like the "good ol
+          days".2) At the Township Rink, a short 15 minute walk into the
+          Village, general skating or skirmish hockey (all invited). Provided
+          Free to Use:- Ice Skates up to size 14- Mew Lake Park Pass from our
+          Office
+        </p>
+      </section>
 
-        <!-- Algonquin Park Section -->
-        <section class="algonquin">
-            <h2>Algonquin Park</h2>
-            <img src="/images/park.jpg" alt="Algonquin Park">
-            <p>
-                Algonquin Visitor Center
-                Pristine and natural snow covered Algonquin Park is home to world-class venues and We provide the Free Park Pass.
-                Algonquin Park's Visitor Centre is open daily, has exhibits on the Park's natural and human history, a relaxing restaurant, an excellent bookstore, theatre and a  viewing deck of the Winter wild Algonquin landscape. 
-Algonquin Park Live Now Weather Cam  
-            </p>
-        </section>
+      <!-- Algonquin Park Section -->
+      <section class="algonquin">
+        <h2>Algonquin Park</h2>
+        <img src="/images/park.jpg" alt="Algonquin Park" />
+        <p>
+          Algonquin Visitor Center Pristine and natural snow covered Algonquin
+          Park is home to world-class venues and We provide the Free Park Pass.
+          Algonquin Park's Visitor Centre is open daily, has exhibits on the
+          Park's natural and human history, a relaxing restaurant, an excellent
+          bookstore, theatre and a  viewing deck of the Winter wild Algonquin
+          landscape.  Algonquin Park Live Now Weather Cam
+        </p>
+      </section>
 
-        <!-- Other Activities Section -->
-        <section class="other-activities">
-            <h2>Other Activities</h2>
-            <p>
-                Guided Snowmobile Tours
-                https://ridethewilderness.com/ontorio-snowmobiling-trips/
-                Bring your own Snowmobile, the main Trail system is 1 km away and easy to sled to.
-                The Ontario Federation of Snowmobile Clubs -OFSC- List trails, permits, programs and Events for Ontario snowmobilers.www.ofsc.on.c
-            </p>
-        </section>
+      <!-- Other Activities Section -->
+      <section class="other-activities">
+        <h2>Other Activities</h2>
+        <p>
+          Guided Snowmobile Tours
+          https://ridethewilderness.com/ontorio-snowmobiling-trips/ Bring your
+          own Snowmobile, the main Trail system is 1 km away and easy to sled
+          to. The Ontario Federation of Snowmobile Clubs -OFSC- List trails,
+          permits, programs and Events for Ontario snowmobilers.www.ofsc.on.c
+        </p>
+      </section>
     </main>
 
     <!-- Footer -->
     <footer>
-        <div class="footer-content">
-            <p>&copy; 2023 Couples Resort. All rights reserved.</p>
-            <address>
-                123 Resort Lane, City, Country<br>
-                Phone: +1 234 567 890<br>
-                Email: info@couplesresort.com
-            </address>
-        </div>
+      <div class="footer-content">
+        <p>&copy; 2023 Couples Resort. All rights reserved.</p>
+        <address>
+          123 Resort Lane, City, Country<br />
+          Phone: +1 234 567 890<br />
+          Email: info@couplesresort.com
+        </address>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
