--- a/room.html
+++ b/room.html
@@ -7,13 +7,26 @@
     <title>Couples Resort - SPA Villas</title>
 </head>
 <body>
-    <!-- Header -->
-    <header>
-        <div class="menu-icon">
-            <span>&#9776;</span>
-        </div>
-        <div class="logo">
-            <h1><span>&#10084;</span> Couples Resort</h1>
+    <header class="grid-con" id="main-header">
+        <nav id="main-nav" class="col-span-full">
+            <h2 class="hidden">Menu</h2>
+            <input type="checkbox" id="hamburger">
+            <label for="hamburger">
+            <img src="/images/burger.svg" alt="hamburger menu icon">
+            </label>
+            <div id="burger-con">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Rooms</a></li>
+                    <li><a href="#">Packages</a></li>
+                    <li><a href="room.html">Dining</a></li>
+                    <li><a href="spa.html">Spa Activites</a></li>
+                    <li><a href="#">Reservations</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div id="logo" class="col-span-full">
+            <img src="/images/Group 48.png" alt="Couples Resort Logo">
         </div>
     </header>
 
